@@ -255,6 +255,14 @@ public:
   //// export macro definition.
   void skel_export_include (const char* s);
 
+  //// Returns the name of the include file that will be generated for the
+  //// server side export macro definition.
+  const char* skel_export_file (void) const;
+
+  //// Set the name of the include file that the will be generated for server
+  //// side export macro definition.
+  void skel_export_file (const char* s);
+
   //// Returns the macro name for exporting client side classes in Win32
   //// DLL.
   const char* stub_export_macro (void) const;
@@ -269,6 +277,14 @@ public:
   //// Set the name of the include file that contains the client side
   //// export macro definition.
   void stub_export_include (const char* s);
+
+  //// Returns the name of the include file will be generated for the client
+  //// side export macro definition.
+  const char* stub_export_file (void) const;
+
+  //// Set the name of the include file that will be generated for the client
+  //// side export macro definition.
+  void stub_export_file (const char* s);
 
   //// Returns the macro name for exporting *A.h file classes in Win32
   //// DLL.
@@ -883,8 +899,10 @@ private:
   // Macros and includes used to export classes from generated code.
   char* skel_export_macro_;
   char* skel_export_include_;
+  char* skel_export_file_;
   char* stub_export_macro_;
   char* stub_export_include_;
+  char* stub_export_file_;
 
   // Macro and include used on ORB .pidl files generating to the
   // AnyTypeCode library.
